--- a/StreamTools/StreamTools/wwwroot/index.html
+++ b/StreamTools/StreamTools/wwwroot/index.html
@@ -11,6 +11,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+
 
     <!-- Material CSS -->
     <link href="css/material.min.css" rel="stylesheet">
