Fet: Added data driven table and started working on user objects

--- a/StreamTools/StreamTools/wwwroot/index.html
+++ b/StreamTools/StreamTools/wwwroot/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>StreamTools</title>
+    <title>PiShock StreamTools</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 
-
     <!-- Material CSS -->
     <link href="css/material.min.css" rel="stylesheet">
-
-    <!-- Add Material font (Roboto) and Material icon as needed -->
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
     <link href="_content/Blazorise.Icons.Material/blazorise.icons.material.css" rel="stylesheet" />
