--- a/StreamTools/StreamTools/wwwroot/index.html
+++ b/StreamTools/StreamTools/wwwroot/index.html
@@ -13,13 +13,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 
     <!-- Material CSS -->
-    <link href="css/material.min.css" rel="stylesheet">
-    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Icons.Material/blazorise.icons.material.css" rel="stylesheet" />
-    <link href="_content/Blazorise.LoadingIndicator/blazorise.loadingindicator.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="StreamTools.styles.css" />
 </head>
 
 <body>
@@ -35,9 +31,7 @@
     </div>
 
     <!-- Mandatory JavaScript -->
-    <script src="js/material.min.js"></script>
-    <script src="_content/Blazorise.Animate/blazorise.animate.js?v=1.4.2.0"></script>
-    <script src="_content/Blazorise.Material/blazorise.material.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
 </body>
